# vrich-project

./: .coverage  .gitignore  README.md  coverage.xml  docker-compose.yml  package-lock.json  test-socket.js  test.db
common-api/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  coverage.xml  docker-compose.dev.yml  docker-compose.yml  generate_test_token.py  init.sh  pyproject.toml  requests.http  requirements.txt  sample_products_data.xlsx  sample_products_data_thai.xlsx  sample_products_template.py  sample_products_template.xlsx  sample_products_template_thai.xlsx  structure.txt  test_auth.py
common-api/app/: main.py
common-api/app/api/dependencies/: database.py  pagination.py
common-api/app/api/v1/: router.py
common-api/app/api/v1/endpoints/: auth.py  campaign.py  campaigns_notifications.py  campaigns_products.py  facebook_comment.py  facebook_inbox.py  facebook_messenger.py  facebook_post.py  facebook_profile.py  notifications.py  orders.py  orders_products.py  payments.py  products.py  profiles_contacts.py  users.py  webhooks.py
common-api/app/constants/: auth.py  campaign.py  facebook_comment.py  facebook_messenger.py  facebook_post.py  facebook_profile.py  user.py
common-api/app/core/: config.py  security.py
common-api/app/db/: session.py  types.py
common-api/app/db/models/: __init__.py  base.py  campaign.py  campaigns_notifications.py  campaigns_products.py  facebook_comment.py  facebook_inbox.py  facebook_messenger.py  facebook_post.py  facebook_profile.py  orders.py  orders_products.py  payments.py  products.py  profiles_contacts.py  user.py
common-api/app/db/repositories/: __init__.py  campaign.py
common-api/app/db/repositories/campaigns_notifications/: __init__.py  repo.py
common-api/app/db/repositories/campaigns_products/: __init__.py  repo.py
common-api/app/db/repositories/crud/: base.py
common-api/app/db/repositories/facebook_comment/: __init__.py  create.py  query.py  repo.py  update.py
common-api/app/db/repositories/facebook_inbox/: __init__.py  create.py  query.py  repo.py
common-api/app/db/repositories/facebook_messenger/: __init__.py  create.py  query.py  repo.py
common-api/app/db/repositories/facebook_post/: __init__.py  create.py  query.py  repo.py  update.py
common-api/app/db/repositories/facebook_profile/: __init__.py  create.py  query.py  repo.py  update.py
common-api/app/db/repositories/orders/: __init__.py  repo.py
common-api/app/db/repositories/orders_products/: __init__.py  repo.py
common-api/app/db/repositories/payments/: __init__.py  repo.py
common-api/app/db/repositories/products/: __init__.py  repo.py
common-api/app/db/repositories/profiles_contacts/: __init__.py  repo.py
common-api/app/db/repositories/user/: __init__.py  user_auth.py  user_create.py  user_query.py  user_repo.py  user_update.py
common-api/app/schemas/: __init__.py  campaign.py  campaigns_notifications.py  campaigns_products.py  common.py  facebook_comment.py  facebook_messenger.py  facebook_post.py  facebook_profile.py  orders.py  orders_products.py  payments.py  products.py  profiles_contacts.py  user.py
common-api/app/seeds/: constants.py  seed_facebook_comments.py  seed_facebook_inboxes.py  seed_facebook_messengers.py  seed_facebook_posts.py  seed_facebook_profiles.py  seed_users.py
common-api/app/services/: __init__.py  facebook_scheduler.py  product_excel_service.py  socketio_server.py  validation_service.py  webhook_cache_service.py
common-api/app/utils/: redis.py
common-api/docs/: excel_upload.md
common-api/migrations/: alembic.ini
common-api/migrations/alembic/: env.py
common-api/migrations/alembic/versions/: 8110f0033ebb_add_user_table.py
common-api/scripts/: create_admin.py  create_fenix_admin.py
common-api/tests/: conftest.py
common-api/tests/fixtures/: conftest.py
common-api/tests/unit/: test_campaign.py  test_campaigns_notifications.py  test_campaigns_products.py  test_facebook_comment.py  test_facebook_inbox.py  test_facebook_messenger.py  test_facebook_post.py  test_facebook_profile.py  test_orders.py  test_orders_products.py  test_pagination.py  test_payments.py  test_product_excel.py  test_products.py  test_profiles_contacts.py  test_redis_webhooks.py  test_users.py  test_validation_rules.py  test_validation_service.py
db-migrations/: .env.example  README.md  docker-compose.yml
db-migrations/diagrams/: facebook.md
db-migrations/seed/: campaigns_202507231751.sql  campaigns_products_202507231751.sql  facebook_comments_202507101446.sql  facebook_comments_202507231751.sql  facebook_inboxes_202507101446.sql  facebook_inboxes_202507231751.sql  facebook_posts_202507101446.sql  facebook_posts_202507231751.sql  orders_202507231751.sql  (+6 more)
facebook-comment-worker/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requests.http
facebook-inbox-worker/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requests.http
facebook-page-api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requests.http
facebook-page-api/app/: main.py
facebook-page-api/app/api/v1/: router.py
facebook-page-api/app/api/v1/endpoints/: facebooks.py  messenger.py  messengers.py  webhooks.py
facebook-page-api/app/core/: config.py
facebook-page-api/app/schedule/: facebook_comments.py  facebook_posts.py
facebook-page-api/app/services/: facebook_services.py
facebook-page-api/app/utils/: logging.py
facebook-page-api/mocks/: slip.json
facebook-page-api/scripts/: dev.sh
facebook-page-api/tests/: test_facebooks.py  test_messengers.py  test_webhooks.py
facebook-post-worker/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requests.http
web/: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  README.md  components.json  declarations.d.ts  eslint.config.js  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  svg.config.js  tailwind.config.ts  tsconfig.json
(+290 files in other folders)
